# ai_discord_bot

./: .gitignore  FEATURES_ADDED.md  MANIFEST.in  Makefile  PERSONALITY_UPGRADE.md  PHASE_11_MASTER.md  QUICKSTART.md  QUICK_TEST.md  README.md  UPGRADE_COMPLETE.md  agents.py  audio.py  committee_agent.py  dashboard.py  main.py  ollama_client.py  optimizer.py  personality.py  pyproject.toml  requirements.txt  research_agent.py  setup.py  test_generation.py  test_system.py
.github/workflows/: ci.yml  tests.yml
dashboard/ui/: app.js  index.html  style.css
data/: champion_roles.json
data/wild_rift_builds/: README.md  garen.md  jinx.md  leona.md  nasus.md  shyvana.md  vi.md
deterministic/: __init__.py  finance_tools.py  fitness_tools.py  math_tools.py  nutrition_tools.py  registry.py  wildrift_matchup.py  wildrift_tools.py
godbot/: __init__.py  bot.py  cli.py
godbot/commands/: __init__.py  finance.py  fitness.py  generation.py  nutrition.py  plugins.py  scheduler.py  wildrift.py
godbot/core/: __init__.py  llm.py  logging.py  memory.py  scheduler.py  vector_memory.py
godbot/dashboard/: routes.py  server.py
godbot/deterministic/: __init__.py  finance_tools.py  fitness_tools.py  nutrition_tools.py  wildrift_tools.py
godbot/discord/: __init__.py  bot.py
godbot/web/: __init__.py
plugins/: marketplace.json  plugin_loader.py  plugin_manager.py  plugin_sandbox.py
scheduled_tasks/: __init__.py  daily_report.py  memory_cleanup.py  ping_test.py  plugin_autoreload.py
tests/: __init__.py  test_dashboard.py  test_finance.py  test_finance_tools.py  test_fitness.py  test_fitness_tools.py  test_generation.py  test_llm.py  test_logging.py  test_matchup_detection.py  test_math.py  test_math_tools.py  test_nutrition.py  test_nutrition_tools.py  test_plugins.py  test_registry.py  test_scheduler.py  test_strength_tools.py  test_wildrift.py  test_wildrift_matchup.py  test_wildrift_tools.py
(+17 files in other folders)
