[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "godbot"
version = "0.1.0"
description = "Modular Discord AI bot platform with dashboard, plugins, LLM engine, and media generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord.py",
    "flask",
    "waitress",
    "requests",
    "python-dotenv",
    "numpy",
    "pytest",
    "transformers",
    "diffusers",
    "accelerate",
    "pillow",
    "opencv-python",
    "imageio",
    "moviepy",
]

[project.scripts]
godbot = "godbot.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
godbot = [
    "dashboard/templates/*.html",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-select = ["E", "F", "I"]
extend-ignore = ["E501"]  # Ignore long lines for LLM prompts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
